<?xml version="1.0" encoding="utf-8"?>

<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_account_circle_24dp"
        android:title="@string/menu_settings_profile"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/adminFragment"
        android:icon="@drawable/ic_gear_24dp"
        android:title="@string/menu_admin_title"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />

    <item
        android:id="@+id/logoutItem"
        android:icon="@drawable/ic_lock_outline_24dp"
        android:title="@string/menu_log_out_title"
        app:showAsAction="never" />
</menu>