<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.skichrome.oc.easyvgp.viewmodel.VgpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/form_layout_margin_horizontal">

        <TextView
            android:id="@+id/fragVGPItemTitle"
            style="@style/EasyVGPTheme.tvBody1Style"
            android:text="@string/frag_vgp_item_title_ctrl_point"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragVGPChoiceGoodTitle"
            style="@style/EasyVGPTheme.tvBody1Style"
            android:layout_marginEnd="28dp"
            android:text="@string/frag_vgp_item_title_state_be"
            app:layout_constraintEnd_toStartOf="@+id/fragVGPChoiceOkTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragVGPChoiceOkTitle"
            style="@style/EasyVGPTheme.tvBody1Style"
            android:layout_marginEnd="28dp"
            android:text="@string/frag_vgp_item_title_state_em"
            app:layout_constraintEnd_toStartOf="@+id/fragVGPChoiceBadTitle"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/fragVGPChoiceBadTitle"
            style="@style/EasyVGPTheme.tvBody1Style"
            android:layout_marginEnd="78dp"
            android:text="@string/frag_vgp_item_title_state_me"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/EasyVGPTheme.tvBody1Style"
            android:text="@string/frag_vgp_item_title_notes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fragVGPRecyclerView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/margin_do_not_hide_fab"
            app:items_ctrl_points_vgp="@{viewModel.machineTypeWithControlPointsData}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fragVGPItemTitle"
            tools:listitem="@layout/item_rv_fragment_vgp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fragVGPFab"
            style="@style/EasyVGPTheme.fabStyle"
            android:src="@drawable/ic_save_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>